--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,110 @@
+$ligthRed: rgb(255, 82, 93);
+$ligth-red-trasnparent: rgba(247, 241, 241, 0.3);
+$transparent-white: rgba(255, 255, 255, .7);
+$overpass: 'Overpass', sans-serif;
+$ubuntu: 'Ubuntu', sans-serif;
+
+@mixin button-pattern($color){
+    width: 110px;
+    height: 40px;
+    border: none;
+    color: $color;
+    border-radius: 20px;
+    font-size: .8rem;
+    font-weight: 700;
+    cursor: pointer;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.container{
-    padding: 3% 5%;
+body{
+    font-family: $ubuntu;
+    font-weight: 400;
 }
+
+header{
+    background-color: $ligthRed;
+    border-bottom-left-radius: 100px;
+    background-image: url("../images/bg-pattern-intro.svg");
+    background-size: 3400px;
+    background-position: -550px -1470px;
+    background-repeat: no-repeat;
+    .container{
+        padding: 3% 8%;
+        font-weight: 700;
+        color: $transparent-white;
+        text-align: center;
+
+        nav{
+            display: flex;
+            
+            img{
+                height: 40px;
+            }
+            ul:nth-child(2){
+                flex-grow: 1;
+                align-items: center;
+            }
+            ul{
+                display: flex;
+                margin-left: 20px;
+            }
+            ul li{
+                list-style: none;
+                margin: 0 20px;
+            }
+            a{
+                text-decoration: none;
+                color: rgb(228, 220, 220);
+            }
+            button{
+                @include button-pattern($ligthRed);
+                margin-left: 10px;
+                &:hover{
+                    background-color: $ligth-red-trasnparent;
+                    color: white;
+                }
+                
+            }
+        }
+        #start{
+            @include button-pattern($ligthRed);
+            margin-top: 50px;
+            margin-right: 10px;
+            margin-bottom: 70px;
+            &:hover{
+                background-color: $ligth-red-trasnparent;
+                color: white;
+            }
+        }
+
+        #learn{
+            @include button-pattern(white);
+            background-color: transparent;
+            border: 2px solid $transparent-white;
+            &:hover{
+                @include button-pattern($ligthRed);
+                background-color: white;
+            }
+        }
+        
+    }
+    h1{
+        font-size: 4em;
+        font-weight: 600;
+        font-family: $overpass;
+        margin-top: 100px;
+        color: white;
+    }
+    p{
+        color: $transparent-white;
+        font-weight: 200;
+        font-size: 1.2em;
+        letter-spacing: 0.02rem;
+        margin-top: 10px;
+    }
+}
+
