created code js, html and css of dropdown of navigation

--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,36 @@ header {
         display: flex;
         margin-left: 20px; }
       header .container nav ul li {
+        position: relative;
         list-style: none;
-        margin: 0 20px; }
+        margin: 0 20px;
+        cursor: pointer; }
+      header .container nav ul li:hover {
+        color: white;
+        text-decoration: underline; }
+      header .container nav ul li::after {
+        content: url("../images/icon-arrow-dark.svg");
+        margin-left: 8px; }
+      header .container nav .connect {
+        display: none; }
+      header .container nav .active {
+        display: block;
+        min-width: 150px;
+        background-color: white;
+        color: black;
+        font-weight: 400;
+        padding: 24px;
+        text-align: start;
+        border-radius: 6px;
+        position: absolute;
+        top: 30px;
+        left: -20px; }
+        header .container nav .active span {
+          display: block;
+          margin-bottom: 10px; }
+      header .container nav .connect span:hover {
+        font-weight: 600;
+        cursor: pointer; }
       header .container nav a {
         text-decoration: none;
         color: #e4dcdc; }
