--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,26 @@ header {
   background-size: 3400px;
   background-position: -550px -1470px;
   background-repeat: no-repeat; }
+  @media screen and (max-width: 375px) {
+    header {
+      padding: 60px 0;
+      background-size: 1500px;
+      background-position: -400px -400px; } }
   header .container {
     color: rgba(255, 255, 255, 0.7);
     text-align: center; }
+    @media screen and (max-width: 375px) {
+      header .container nav {
+        justify-content: space-between; }
+        header .container nav img.btn-mobile {
+          height: 30px;
+          display: inline-block; }
+      header .container h1 {
+        font-size: 2.2em; } }
     header .container nav {
       display: flex; }
+      header .container nav .btn-mobile {
+        display: none; }
       header .container nav img {
         height: 40px; }
       header .container nav ul:nth-child(2) {
@@ -32,6 +47,15 @@ header {
       header .container nav ul {
         display: flex;
         margin-left: 20px; }
+        @media screen and (max-width: 375px) {
+          header .container nav ul {
+            background-color: white;
+            color: black;
+            flex-direction: column;
+            width: 80%;
+            position: absolute;
+            height: 80%;
+            top: 150px; } }
       header .container nav ul li {
         position: relative;
         list-style: none;
@@ -71,12 +95,12 @@ header {
         text-decoration: none;
         color: #e4dcdc; }
       header .container nav button {
-        width: 110px;
-        height: 40px;
+        width: 120px;
+        height: 42px;
         border: none;
         color: #ff525d;
         border-radius: 20px;
-        font-size: .8rem;
+        font-size: .9rem;
         font-weight: 700;
         cursor: pointer;
         margin-left: 10px; }
@@ -84,12 +108,12 @@ header {
           background-color: rgba(247, 241, 241, 0.3);
           color: white; }
     header .container #start {
-      width: 110px;
-      height: 40px;
+      width: 120px;
+      height: 42px;
       border: none;
       color: #ff525d;
       border-radius: 20px;
-      font-size: .8rem;
+      font-size: .9rem;
       font-weight: 700;
       cursor: pointer;
       margin-top: 50px;
@@ -99,23 +123,23 @@ header {
         background-color: rgba(247, 241, 241, 0.3);
         color: white; }
     header .container #learn {
-      width: 110px;
-      height: 40px;
+      width: 120px;
+      height: 42px;
       border: none;
       color: white;
       border-radius: 20px;
-      font-size: .8rem;
+      font-size: .9rem;
       font-weight: 700;
       cursor: pointer;
       background-color: transparent;
       border: 2px solid rgba(255, 255, 255, 0.7); }
       header .container #learn:hover {
-        width: 110px;
-        height: 40px;
+        width: 120px;
+        height: 42px;
         border: none;
         color: #ff525d;
         border-radius: 20px;
-        font-size: .8rem;
+        font-size: .9rem;
         font-weight: 700;
         cursor: pointer;
         background-color: white; }
@@ -134,7 +158,7 @@ header {
 
 main {
   overflow: hidden; }
-  main h1 {
+  main > h1 {
     margin-top: 120px;
     text-align: center;
     font-size: 2.2rem;
@@ -163,5 +187,94 @@ section.future {
       margin-left: 40px;
       position: absolute;
       top: -410px; }
+
+section.state {
+  min-height: 400px;
+  margin: 50px 0;
+  position: relative;
+  color: white; }
+  section.state img {
+    position: absolute;
+    z-index: 6;
+    top: -18%;
+    left: 100px; }
+  section.state .container {
+    border-top-right-radius: 100px;
+    border-bottom-left-radius: 100px;
+    background-image: linear-gradient(to right, #2c2d3f, #3f4164);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    min-height: 400px;
+    position: relative;
+    overflow: hidden; }
+    section.state .container img {
+      position: absolute;
+      top: -68px;
+      left: 0; }
+    section.state .container #circles {
+      position: absolute;
+      max-width: 72%;
+      top: -115%;
+      left: -16%;
+      z-index: 6; }
+    section.state .container div {
+      width: 48%;
+      z-index: 6; }
+    section.state .container h1 {
+      font-size: 2.2em;
+      font-weight: 300;
+      margin-bottom: 20px; }
+    section.state .container p {
+      font-size: 1em;
+      font-weight: 100;
+      opacity: 0.6;
+      max-width: 94%;
+      line-height: 26px; }
+
+section.powerful {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  margin: 50px 0;
+  padding: 80px 0; }
+  section.powerful img {
+    max-width: 900px;
+    position: absolute;
+    top: 0px;
+    left: -368px; }
+  section.powerful div {
+    width: 50%; }
+    section.powerful div h2 {
+      color: #1f3f5b;
+      font-size: 1.8em;
+      font-weight: 500;
+      margin-top: 70px;
+      margin-bottom: 20px; }
+    section.powerful div p {
+      max-width: 91%;
+      font-weight: 300;
+      line-height: 30px; }
+
+footer {
+  background-color: #25252d;
+  padding: 40px 0px;
+  border-top-right-radius: 100px; }
+  footer .container {
+    display: flex;
+    font-size: 0.9em;
+    color: rgba(255, 255, 255, 0.7);
+    font-weight: 100; }
+    footer .container div {
+      margin-right: 180px; }
+    footer .container h3 {
+      color: white;
+      margin-bottom: 40px; }
+    footer .container p {
+      margin-top: 16px;
+      cursor: pointer; }
+      footer .container p:hover {
+        text-decoration: underline; }
 
 /*# sourceMappingURL=style.css.map */
