--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,7 +44,7 @@ header{
     background-position: -550px -1470px;
     background-repeat: no-repeat;
     @media screen and (max-width: 375px) {
-        padding: 60px 0;
+        padding: 40px 0;
         background-size: 1500px;
         background-position: -400px -400px;
     }
@@ -57,6 +57,7 @@ header{
             nav{
                 justify-content: space-between;
                 img.btn-mobile{
+                    width: 40px;
                     height: 30px;
                     display: inline-block;
 
@@ -64,11 +65,11 @@ header{
             }
             
             div{
-                //display: none;
+                display: none;
             }
             ul{
-                //display: none;
-
+                display: none;
+                
             }
             h1{
                 font-size: 2.2em;
@@ -90,14 +91,22 @@ header{
                 display: flex;
                 margin-left: 20px;
                 @media screen and (max-width: 375px){
-                   // display: none;
+                    display: none;
                     background-color: white;
                     color: black;
                     flex-direction: column;
-                    width: 80%;
+                    width: 84%;
                     position: absolute;
-                    height: 80%;
-                    top: 150px;
+                    height: 70%;
+                    top: 130px;
+                    border-radius: 6px;
+                    padding: 20px;
+                    margin-left: 0;
+                    -webkit-box-shadow: 1px 1px 8px 0px rgba(0,0,0,0.7); 
+                    box-shadow: 1px 1px 16px 0px rgba(0,0,0,0.4);
+                }
+                @media screen and (min-width:376px){
+                    display: flex !important; 
                 }
             }
             ul li{
@@ -105,13 +114,18 @@ header{
                 list-style: none;
                 margin: 0 20px;
                 cursor: pointer;
-                
+                @media screen and (max-width: 375px) {
+                    margin-bottom: 20px;
+                }
             }
             ul li:hover{
                 color: white;
                 text-decoration: underline;
-                
+                @media screen and (max-width: 372px){
+                    color: black;
+                }
             }
+
                              
             ul li::after{
                 content: url("../images/icon-arrow-dark.svg");
@@ -119,8 +133,11 @@ header{
             }
             li.activea::after{
                 content: url("../images/icon-arrow-light.svg");
-                float: right;
+                //float: right;
                 transform: rotate(180deg);
+                @media screen and(max-width: 375px){
+                    content: url("../images/icon-arrow-dark.svg");
+                }
             }
             .connect{
                 display: none;
@@ -141,6 +158,13 @@ header{
                     display: block;
                     margin-bottom: 10px;
                 }
+                @media screen and (max-width: 375px){
+                    position: relative;
+                    padding: 0;
+                    text-align: center;
+                    left: 0;
+                }
+
             }
             .connect span:hover{
                 font-weight: 600;
@@ -149,6 +173,18 @@ header{
             a{
                 text-decoration: none;
                 color: rgb(228, 220, 220);
+                @media screen and (max-width:375px){
+                    color: rgba(0, 0, 0, 0.555);
+                }
+            }
+            div{
+                position: relative;
+                @media screen and (max-width:375px){
+                    top: 400px;
+                    left: -13%;
+                    color: black;
+                }
+                
             }
             button{
                 @include button-pattern($ligthRed);
@@ -157,7 +193,14 @@ header{
                     background-color: $ligth-red-trasnparent;
                     color: white;
                 }
-                
+                @media screen and (max-width: 375px){
+                    @include button-pattern($transparent-white);
+                    background-color: $ligthRed;
+                    margin-top: 10px;
+                    &:hover{
+                        background-color: $ligthRed;
+                    }
+                }
             }
             
         }
