--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ header {
         cursor: pointer; }
         @media screen and (max-width: 375px) {
           header .container nav ul li {
-            margin-bottom: 20px; } }
+            margin-bottom: 30px; } }
       header .container nav ul li:hover {
         color: white;
         text-decoration: underline; }
@@ -89,10 +89,14 @@ header {
         margin-left: 8px; }
       header .container nav li.activea::after {
         content: url("../images/icon-arrow-light.svg");
+        float: right;
         transform: rotate(180deg); }
         @media screen and (max-width: 375px) {
           header .container nav li.activea::after {
-            content: url("../images/icon-arrow-dark.svg"); } }
+            content: url("../images/icon-arrow-dark.svg");
+            position: absolute;
+            top: 0;
+            left: 120px; } }
       header .container nav .connect {
         display: none; }
       header .container nav .active {
@@ -216,6 +220,9 @@ main {
     font-size: 2.2rem;
     font-weight: 500;
     color: #1f3f5b; }
+    @media screen and (max-width: 375px) {
+      main > h1 {
+        font-size: 1.7rem; } }
 
 section.future {
   display: flex;
@@ -224,32 +231,60 @@ section.future {
   section.future div {
     width: 50%;
     position: relative; }
+    @media screen and (max-width: 375px) {
+      section.future div {
+        width: 100%;
+        text-align: center; } }
     section.future div h2 {
       color: #1f3f5b;
       font-size: 1.8em;
       font-weight: 500;
       margin-top: 70px;
       margin-bottom: 20px; }
+      @media screen and (max-width: 375px) {
+        section.future div h2 {
+          margin-top: 50px; } }
     section.future div p {
       max-width: 91%;
       font-weight: 300;
       line-height: 30px; }
+      @media screen and (max-width: 375px) {
+        section.future div p {
+          max-width: 100%; } }
     section.future div img {
       max-width: 900px;
       margin-left: 40px;
       position: absolute;
       top: -410px; }
+      @media screen and (max-width: 375px) {
+        section.future div img {
+          width: 128%;
+          margin-left: 0;
+          position: relative;
+          top: 0;
+          left: -44px; } }
+  @media screen and (max-width: 375px) {
+    section.future {
+      flex-direction: column-reverse; } }
 
 section.state {
   min-height: 400px;
   margin: 50px 0;
   position: relative;
   color: white; }
+  @media screen and (max-width: 375px) {
+    section.state {
+      margin-top: 240px; } }
   section.state img {
     position: absolute;
     z-index: 6;
     top: -18%;
     left: 100px; }
+    @media screen and (max-width: 375px) {
+      section.state img {
+        top: -32%;
+        left: 0;
+        width: 100%; } }
   section.state .container {
     border-top-right-radius: 100px;
     border-bottom-left-radius: 100px;
@@ -270,9 +305,21 @@ section.state {
       top: -115%;
       left: -16%;
       z-index: 6; }
+      @media screen and (max-width: 375px) {
+        section.state .container #circles {
+          left: -110px;
+          top: -230px;
+          max-width: 200%;
+          width: 160%; } }
     section.state .container div {
       width: 48%;
       z-index: 6; }
+      @media screen and (max-width: 375px) {
+        section.state .container div {
+          width: 100%;
+          text-align: center;
+          margin-top: 220px;
+          margin-bottom: 80px; } }
     section.state .container h1 {
       font-size: 2.2em;
       font-weight: 300;
@@ -283,6 +330,11 @@ section.state {
       opacity: 0.6;
       max-width: 94%;
       line-height: 26px; }
+      @media screen and (max-width: 375px) {
+        section.state .container p {
+          max-width: 100%;
+          opacity: 0.8;
+          margin-bottom: 30px; } }
 
 section.powerful {
   display: flex;
@@ -291,38 +343,75 @@ section.powerful {
   position: relative;
   margin: 50px 0;
   padding: 80px 0; }
+  @media screen and (max-width: 375px) {
+    section.powerful {
+      flex-direction: column;
+      margin: 0;
+      padding: 60px 0; } }
   section.powerful img {
     max-width: 900px;
     position: absolute;
     top: 0px;
     left: -368px; }
+    @media screen and (max-width: 375px) {
+      section.powerful img {
+        left: -100px;
+        position: relative;
+        width: 164%; } }
   section.powerful div {
     width: 50%; }
+    @media screen and (max-width: 375px) {
+      section.powerful div {
+        width: 97.5%;
+        text-align: center; } }
     section.powerful div h2 {
       color: #1f3f5b;
       font-size: 1.8em;
       font-weight: 500;
       margin-top: 70px;
       margin-bottom: 20px; }
+      @media screen and (max-width: 375px) {
+        section.powerful div h2 {
+          margin-top: 20px; } }
     section.powerful div p {
       max-width: 91%;
       font-weight: 300;
       line-height: 30px; }
+      @media screen and (max-width: 375px) {
+        section.powerful div p {
+          max-width: 100%;
+          margin-bottom: 40px; } }
 
 footer {
   background-color: #25252d;
   padding: 40px 0px;
   border-top-right-radius: 100px; }
+  @media screen and (max-width: 375px) {
+    footer {
+      padding: 60px 0; } }
   footer .container {
     display: flex;
     font-size: 0.9em;
     color: rgba(255, 255, 255, 0.7);
     font-weight: 100; }
+    @media screen and (max-width: 375px) {
+      footer .container {
+        flex-direction: column;
+        align-items: center; } }
     footer .container div {
       margin-right: 180px; }
+      @media screen and (max-width: 375px) {
+        footer .container div {
+          margin-right: 0;
+          margin-bottom: 60px;
+          text-align: center;
+          font-size: 1.2em; } }
     footer .container h3 {
       color: white;
       margin-bottom: 40px; }
+      @media screen and (max-width: 375px) {
+        footer .container h3 {
+          margin-bottom: 30px; } }
     footer .container p {
       margin-top: 16px;
       cursor: pointer; }
