--- a/sass/style.scss
+++ b/sass/style.scss
@@ -115,7 +115,7 @@ header{
                 margin: 0 20px;
                 cursor: pointer;
                 @media screen and (max-width: 375px) {
-                    margin-bottom: 20px;
+                    margin-bottom: 30px;
                 }
             }
             ul li:hover{
@@ -133,10 +133,13 @@ header{
             }
             li.activea::after{
                 content: url("../images/icon-arrow-light.svg");
-                //float: right;
+                float: right;
                 transform: rotate(180deg);
                 @media screen and(max-width: 375px){
                     content: url("../images/icon-arrow-dark.svg");
+                    position: absolute;
+                    top: 0;
+                    left: 120px;
                 }
             }
             .connect{
@@ -227,7 +230,6 @@ header{
         
     }
     
-    //@import 'responsive';
     h1{
         font-size: 4em;
         font-weight: 600;
@@ -251,7 +253,9 @@ main {
         font-size: 2.2rem;
         font-weight: 500;
         color: $dark-blue;
-
+        @media screen and (max-width: 375px){
+            font-size: 1.7rem;
+        }
     }
 }
 section.future{
@@ -261,24 +265,44 @@ section.future{
     div{
         width: 50%;
         position: relative;
+        @media screen and (max-width: 375px) {
+            width: 100%;
+            text-align: center;
+        }
         h2{
             color: $dark-blue;
             font-size: 1.8em;
             font-weight: 500;
             margin-top: 70px;
             margin-bottom: 20px;
+            @media screen and (max-width: 375px) {
+                margin-top: 50px;
+            }
         }
         p{
             max-width: 91%;
             font-weight: 300;
             line-height: 30px;
+            @media screen and (max-width: 375px) {
+                max-width: 100%;
+            }
         }
         img{
             max-width: 900px;
             margin-left: 40px;
             position: absolute;
             top: -410px;
+            @media screen and (max-width: 375px) {
+                width: 128%;
+                margin-left: 0;
+                position: relative;
+                top: 0;
+                left: -44px;
+            }
         }
+    }
+    @media screen and (max-width: 375px) {
+        flex-direction: column-reverse;
     }
 }
 section.state{
@@ -286,11 +310,19 @@ section.state{
     margin: 50px 0;
     position: relative;
     color: white;
+    @media screen and (max-width: 375px) {
+        margin-top: 240px;
+    }
     img{
         position: absolute;
         z-index: 6;
         top: -18%;
         left: 100px;
+        @media screen and (max-width: 375px) {
+            top: -32%;
+            left: 0;
+            width: 100%;
+        }
     }
     .container{
         border-top-right-radius: 100px;
@@ -313,10 +345,22 @@ section.state{
             top: -115%;
             left: -16%;
             z-index: 6;
+            @media screen and (max-width: 375px) {
+                left: -110px;
+                top: -230px;
+                max-width: 200%;
+                width: 160%;
+            }
         }
         div{
             width: 48%;
             z-index: 6;
+            @media screen and (max-width: 375px){
+                width: 100%;
+                text-align: center;
+                margin-top: 220px;
+                margin-bottom: 80px;
+            }
         }
         h1{
             font-size: 2.2em;
@@ -329,6 +373,11 @@ section.state{
             opacity: 0.6;
             max-width: 94%;
             line-height: 26px;
+            @media screen and (max-width: 375px) {
+                max-width: 100%;
+                opacity: 0.8;
+                margin-bottom: 30px;
+            }
         }
     }
 }
@@ -340,25 +389,46 @@ section.powerful{
     position: relative;
     margin: 50px 0;
     padding: 80px 0;
+    @media screen and (max-width: 375px) {
+        flex-direction: column;
+        margin: 0;
+        padding: 60px 0;
+    }
     img{
         max-width: 900px;
         position: absolute;
         top: 0px;
         left: -368px;
+        @media screen and (max-width: 375px) {
+            left: -100px;
+            position: relative;
+            width: 164%;
+        }
     }
     div{
         width: 50%;
+        @media screen and (max-width: 375px) {
+            width: 97.5%;
+            text-align: center;
+        }
         h2{
             color: #1f3f5b;
             font-size: 1.8em;
             font-weight: 500;
             margin-top: 70px;
             margin-bottom: 20px;
+            @media screen and (max-width: 375px) {
+                margin-top: 20px;
+            }
         }
         p{
             max-width: 91%;
             font-weight: 300;
             line-height: 30px;
+            @media screen and (max-width:375px) {
+                max-width: 100%;
+                margin-bottom: 40px;
+            }
         }
     }
 }
@@ -367,17 +437,33 @@ footer{
     background-color: $very-dark-blue;
     padding: 40px 0px;
     border-top-right-radius: 100px;
+    @media screen and (max-width: 375px) {
+        padding: 60px 0;
+    }
     .container{
         display: flex;
         font-size: 0.9em;
         color: $transparent-white;
         font-weight: 100;
+        @media screen and (max-width: 375px) {
+            flex-direction: column;
+            align-items: center;
+        }
         div{
             margin-right: 180px;
+            @media screen and (max-width: 375px) {
+                margin-right: 0;
+                margin-bottom: 60px;
+                text-align: center;
+                font-size: 1.2em;
+            }
         }
         h3{
             color: white;
             margin-bottom: 40px;
+            @media screen and (max-width: 375px) {
+                margin-bottom: 30px;
+            }
         }
         p{
             margin-top: 16px;
